Actions
Bug #11533
closedtools/make: gcc9 build errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:
Description
Build errors with gcc9:
/code/gcc9/usr/src/cmd/make/lib/mksh/dosys.cc: In function 'void sh_command2stri ng(String, String)': /code/gcc9/usr/src/cmd/make/lib/mksh/dosys.cc:534:20: error: invalid conversion from 'int' to 'wchar_t*' [-fpermissive] 534 | command->text.p = (int) nul_char; | ^~~~~~~~~~~~~~ | | | int *** Error code 1 /code/gcc9/usr/src/cmd/make/lib/vroot/lock.cc: In function 'int file_lock(char*, char*, int*, int)': /code/gcc9/usr/src/cmd/make/lib/vroot/lock.cc:112:14: error: cast from 'char*' to 'int' loses precision [-fpermissive] 112 | (int) name, (int) lockname); | ^~~~ /code/gcc9/usr/src/cmd/make/lib/vroot/lock.cc:112:26: error: cast from 'char*' to 'int' loses precision [-fpermissive] 112 | (int) name, (int) lockname); | ^~~~~~~~
Related issues
Updated by Toomas Soome about 4 years ago
- Related to Bug #11534: tools/make: remove sys_nerr added
Updated by Toomas Soome about 4 years ago
- Related to Bug #11535: tools/make: amd64 arch is not supported added
Updated by Toomas Soome about 4 years ago
- Related to Bug #11536: tools/make: getmem() should take size_t added
Updated by Toomas Soome about 4 years ago
- Subject changed from make: gcc9 build errors to tools/make: gcc9 build errors
Updated by Electric Monk about 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 356ba08c15b26adbde3440aa89d8b31cd39fc526
commit 356ba08c15b26adbde3440aa89d8b31cd39fc526 Author: Toomas Soome <tsoome@me.com> Date: 2019-08-20T17:23:03.000Z 11533 tools/make: gcc9 build errors 11534 tools/make: remove sys_nerr 11535 tools/make: amd64 arch is not supported 11536 tools/make: getmem() should take size_t Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Robert Mustacchi <rm@joyent.com>
Actions