11533 tools/make: gcc9 build errors 11534 tools/make: remove sys_nerr 11535 tools/make: amd64 arch is not supported 11536 tools/make: getmem() should take size_t Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Robert Mustacchi <rm@joyent.com>